<resources>
    <string name="App_Name">Lifestyle</string>
    <string name="App_Lifestyle_Items_Priority_P1">Priority 1</string>
    <string name="App_Lifestyle_Items_Priority_P2">Priority 2</string>
    <string name="App_Lifestyle_Items_Priority_P3">Priority 3</string>
    <string name="App_Lifestyle_Items_Priority_P4">Priority 4</string>
    <string name="App_Lifestyle_Task_Goal_Title">Goal</string>
    <string name="App_Lifestyle_Task_ToDo_Title">To Do</string>
    <string name="App_Lifestyle_Task_ToBuy_Title">To Buy</string>
    <string name="Placeholder_Loading_Number_Default">0</string>
    <string name="ValuePair_forDataPassing_LifestyleItem">LifestyleItemValuePairDataPassingKey</string>
    <string name="ValuePair_forDataPassing_LifestyleItem_Value">ValuePair_forDataPassing_LifestyleItem_Value</string>
    <string name="ValuePair_forSortPreferences_Key_SortValue">ValuePair_forSortPreferences_Key_SortValue</string>
    <string name="ValuePair_forSortPreferences_Key_SortOrder">ValuePair_forSortPreferences_Key_SortOrder</string>
    <string name="ValuePair_forSortPreferences_Name_Goals_SortingPreferences">ValuePair_forSortPreferences_Name_Goals_SortingPreferences</string>
    <string name="ValuePair_forSortPreferences_Name_ToDo_SortingPreferences">ValuePair_forSortPreferences_Name_ToDo_SortingPreferences</string>
    <string name="ValuePair_forSortPreferences_Name_ToBuy_SortingPreferences">ValuePair_forSortPreferences_Name_ToBuy_SortingPreferences</string>
    <string name="ValuePair_forCategories_Name_Categories">ValuePair_forCategories_Name_Categories</string>
    <string name="ValuePair_forCategories_Key_Categories">ValuePair_forCategories_Key_Categories</string>
    <string name="ValueKey_forSettingsPreference_Profile_Name">ValueKey_forSettingsPreference_Profile_Name</string>
    <string name="ValueKey_forSettingsPreference_Currency_Preferred">ValueKey_forSettingsPreference_Currency_Preferred</string>
    <string name="ValueKey_forSettingsPreference_Backup_Local">ValueKey_forSettingsPreference_Backup_Local</string>
    <string name="ValueKey_forSettingsPreference_Backup_Cloud">ValueKey_forSettingsPreference_Backup_Cloud</string>
    <string name="ValueKey_forSettingsPreference_Restore_Local">ValueKey_forSettingsPreference_Restore_Local</string>
    <string name="ValueKey_forSettingsPreference_Restore_Cloud">ValueKey_forSettingsPreference_Restore_Cloud</string>
    <string name="ValueKey_forSettingsPreference_About_AboutUs">ValueKey_forSettingsPreference_About_AboutUs</string>
    <string name="ValueDefault_Profile_Username">This User</string>
    <string name="ValueDefault_Currency">Rs</string>
    <string-array name="ValueDefault_Currencies">
        <item>Rs</item>
        <item>$</item>
        <item>£</item>
        <item>€</item>
    </string-array>
    <string name="Button_forLifestyleList_ToggleButton_Active_WithSize">Active (%1$s)</string>
    <string name="Button_forLifestyleList_ToggleButton_Completed_WithSize">Completed (%1$s)</string>
    <string name="Button_forLifestyleList_ToggleButton_Active">Active</string>
    <string name="Button_forLifestyleList_ToggleButton_Completed">Completed</string>
    <string name="Button_forLifestyleRestoreItem_SnackBar_Undo">Undo</string>
    <string name="Button_forLifestyleItems_Action_Delete">Delete</string>
    <string name="Button_forLifestyleItems_Action_Done">Done</string>
    <string name="Placeholder_BottomAppBar_DrawerMenu_Title_User">User</string>
    <string name="Placeholder_forLifestyleItem_Details_Category">Category:</string>
    <string name="Placeholder_forLifestyleItem_Details_DateAdded">Date Added:</string>
    <string name="Placeholder_forLifestyleItem_Details_Priority">Priority:</string>
    <string name="Placeholder_forLifestyleItem_Details_DaysActive">Days Active:</string>
    <string name="Placeholder_forLifestyleItem_Details_Price">Estimated Price:</string>
    <string name="Placeholder_forLifestyleItem_Details_Quantity">Quantity:</string>
    <string name="Placeholder_forLifestyleItem_Details_Total">Total:</string>
    <string name="Menu_BottomAppBar_DrawerMain_Goals">@string/App_Lifestyle_Task_Goal_Title</string>
    <string name="Menu_BottomAppBar_DrawerMain_ToDo">@string/App_Lifestyle_Task_ToDo_Title</string>
    <string name="Menu_BottomAppBar_DrawerMain_ToBuy">@string/App_Lifestyle_Task_ToBuy_Title</string>
    <string name="Menu_BottomAppBar_DrawerMain_Dashboard">Dashboard</string>
    <string name="Menu_BottomAppBar_MenuMain_Filter">Filter</string>
    <string name="Menu_BottomAppBar_MenuMain_Sort">Sort</string>
    <string name="Menu_BottomAppBar_MenuMain_Search">Search</string>
    <string name="TextView_fromAddItemActivity_Screen_Title">Add A Task</string>
    <string name="TextView_fromAddItemActivity_Screen_Subtitle">Create your tasks here!</string>
    <string name="TextView_fromAddItemActivity_Subtitle_Details">Details</string>
    <string name="TextView_fromAddItemActivity_Subtitle_Priority">Priority</string>
    <string name="TextView_fromAddItemActivity_Subtitle_Calendar">Google Calendar</string>
    <string name="TextView_fromAddItemActivity_Subtitle_Calendar_Add">Add to Calendar</string>
    <string name="EditText_fromAddItemActivity_Hint_Title">Title</string>
    <string name="EditText_fromAddItemActivity_Hint_Price">Price</string>
    <string name="EditText_fromAddItemActivity_Hint_Qty">Quantity</string>
    <string name="EditText_fromAddItemActivity_Hint_Calendar_Date">Date</string>
    <string name="EditText_fromAddItemActivity_Hint_Calendar_Description">Description</string>
    <string name="EditText_fromAddItemActivity_HelperText_Calendar_Description">This is optional.</string>
    <string name="Spinner_fromAddItemActivity_Hint_ChooseTask">Choose a Task</string>
    <string name="Spinner_fromAddItemActivity_Hint_ChooseCategory">Choose a Category</string>
    <string name="Spinner_fromAddItemActivity_Category_Item_Master">Master List</string>
    <string name="FAB_fromAddItemActivity_Button_Save">Save</string>
    <string name="TextView_fromSettingsActivity_Screen_Title">Settings</string>
    <string name="Fragment_BottomAppBar_Drawer_Menu">Menu</string>
    <string name="TextView_fromDashboardFragment_Title_Main">Dashboard</string>
    <string name="TextView_fromDashboardFragment_LifestyleItem_Subtitle_Priorities">Priorities</string>
    <string name="TextView_fromDashboardFragment_LifestyleItem_Statistics_Active">Active</string>
    <string name="TextView_fromDashboardFragment_LifestyleItem_Statistics_AllTime">All Time</string>
    <string name="TextView_fromDashboardFragment_LifestyleItem_Statistics_Completed">Completed</string>
    <string name="TextView_fromToBuyFragment_Message_EmptyList_Active">Stop being a miser and plan to buy something!</string>
    <string name="TextView_fromToBuyFragment_Message_EmptyList_Completed">You have not been able to buy anything!</string>
    <string name="TextView_fromToDoFragment_Message_EmptyList_Active">Please plan to do something with your life!</string>
    <string name="TextView_fromToDoFragment_Message_EmptyList_Completed">You have not completed any tasks… Yet!</string>
    <string name="TextView_fromGoalsFragment_Message_EmptyList_Active">Don\'t you have some goals in your life?</string>
    <string name="TextView_fromGoalsFragment_Message_EmptyList_Completed">You have not achieved any goals!</string>
    <string name="Fragment_BottomSheetDialog_Sort_Title">Sort</string>
    <string name="Fragment_BottomSheetDialog_Sort_Chips_Title">Title</string>
    <string name="Fragment_BottomSheetDialog_Sort_Chips_DateAdded">Date Added</string>
    <string name="Fragment_BottomSheetDialog_Sort_Chips_DaysAlive">Days Alive</string>
    <string name="Fragment_BottomSheetDialog_Sort_Chips_Priority">Priority</string>
    <string name="Fragment_BottomSheetDialog_Sort_Chips_Category">Category</string>
    <string name="Fragment_BottomSheetDialog_Sort_Chips_DateCompleted">Date Completed</string>
    <string name="Fragment_BottomSheetDialog_Sort_ToggleButton_Ascending">Asc.</string>
    <string name="Fragment_BottomSheetDialog_Sort_ToggleButton_Descending">Desc.</string>
    <string name="Fragment_BottomSheetDialog_Filter_Title">Filter</string>
    <string name="Fragment_BottomSheetDialog_Filter_Groups_Priority_Title">Priority</string>
    <string name="Fragment_BottomSheetDialog_Filter_Groups_Category_Title">Category</string>
    <string name="Fragment_BottomSheetDialog_Filter_Groups_Category_All">All</string>
    <string name="Fragment_BottomSheetDialog_Filter_Groups_Category_Personal">Personal</string>
    <string name="Fragment_BottomSheetDialog_Filter_Groups_Category_Family">Family</string>
    <string name="Fragment_BottomSheetDialog_Filter_Groups_Category_Home">Home</string>
    <string name="Fragment_BottomSheetDialog_Filter_Groups_Category_Household">House Hold</string>
    <string name="Fragment_BottomSheetDialog_Filter_Groups_Category_Friends">Friends</string>
    <string name="Fragment_BottomSheetDialog_Filter_Groups_Category_Business">Business</string>
    <string name="Fragment_BottomSheetDialog_AddCategory_Title">Category</string>
    <string name="Fragment_BottomSheetDialog_AddCategory_Button_Save">Save</string>
    <string name="Fragment_BottomSheetDialog_AddCategory_TextInputLayout_Hint_Category">Category</string>
    <string name="Fragment_fromSettingsMain_Category_Profile_Title">Profile</string>
    <string name="Fragment_fromSettingsMain_Category_Profile_Username_Title">Preferred Name</string>
    <string name="Fragment_fromSettingsMain_Category_Profile_Username_Summary">Your preferred name in the app.</string>
    <string name="Fragment_fromSettingsMain_Category_Currency_Title">Currency</string>
    <string name="Fragment_fromSettingsMain_Category_Currency_Preferred_Title">Preferred Currency</string>
    <string name="Fragment_fromSettingsMain_Category_Backup_Title">Backup</string>
    <string name="Fragment_fromSettingsMain_Category_Backup_Locally_Title">Create a Backup Locally</string>
    <string name="Fragment_fromSettingsMain_Category_Backup_Locally_Summary">Creates a backup locally and saves to specified path.</string>
    <string name="Fragment_fromSettingsMain_Category_Backup_Cloud_Title">Create a Backup in Cloud</string>
    <string name="Fragment_fromSettingsMain_Category_Backup_Cloud_Summary">Creates a backup and saves to Google Drive</string>
    <string name="Fragment_fromSettingsMain_Category_Restore_Title">Restore</string>
    <string name="Fragment_fromSettingsMain_Category_Restore_Locally_Title">Restore Locally</string>
    <string name="Fragment_fromSettingsMain_Category_Restore_Locally_Summary">Restore a Backup Locally</string>
    <string name="Fragment_fromSettingsMain_Category_Restore_Cloud_Title">Restore from Cloud</string>
    <string name="Fragment_fromSettingsMain_Category_Restore_Cloud_Summary">Restore a Backup from Google Drive</string>
    <string name="Fragment_fromSettingsMain_Category_About_Title">About</string>
    <string name="Fragment_fromSettingsMain_Category_About_AboutUs_Title">About Us</string>
    <string name="Fragment_fromSettingsMain_Category_About_AboutUs_Summary">About the Lifestyle application</string>
    <string name="Dialog_fromSettingsMainFragment_BackupRestore_Permissions_Write_Title">Write Storage Permission</string>
    <string name="Dialog_fromSettingsMainFragment_BackupRestore_Permissions_Write_Content">
        To perform a <b>Backup/Restore</b>, we need the <b>Write Storage</b> permission so that we can store/restore the data
        in/from your internal storage. Please permit manually if you want to proceed.
    </string>
    <string name="Dialog_fromSettingsMainFragment_BackupRestore_Permissions_Write_PositiveButton">Permit Manually</string>
    <string name="Dialog_fromSettingsMainFragment_BackupRestore_Permissions_Write_NegativeButton">Cancel</string>
</resources>