<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        
        <item
                android:id="@id/BottomAppBar_fromActivityHome_DrawerMenu_Dashboard"
                android:icon="@drawable/ic_dashboard_dark"
                android:title="@string/Menu_BottomAppBar_DrawerMain_Dashboard"/>
        
        <item
                android:id="@id/BottomAppBar_fromActivityHome_DrawerMenu_Goals"
                android:icon="@drawable/ic_goals_dark"
                android:title="@string/Menu_BottomAppBar_DrawerMain_Goals"/>

        <item
                android:id="@id/BottomAppBar_fromActivityHome_DrawerMenu_ToDo"
                android:icon="@drawable/ic_todo_dark"
                android:title="@string/Menu_BottomAppBar_DrawerMain_ToDo"/>

        <item
                android:id="@id/BottomAppBar_fromActivityHome_DrawerMenu_ToBuy"
                android:icon="@drawable/ic_tobuy_dark"
                android:title="@string/Menu_BottomAppBar_DrawerMain_ToBuy"/>
    </group>
</menu>